manifest/apps/order/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-services
  namespace: be-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-services
  template:
    metadata:
      name: order-services
      labels:
        app: order-services
    spec:
      containers:
        - name: order-services
          image: nvlannasik/order-services-nodejs:release-0.3.0
          ports:
            - name: order-svc
              containerPort: 3000
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m
