manifest/apps/order/services.yml
apiVersion: v1
kind: Service
metadata:
  name: order-services-svc
  namespace: be-order
spec:
  selector:
    app: order-services
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
